Fix spacing

--- a/client/src/components/comments/comment.css
+++ b/client/src/components/comments/comment.css
@@ -135,8 +135,6 @@
 }
 
 .comment-icon-container {
-  display: inline-block;
   height: 100%;
-  width: 10%;
   margin-right: 10px;
 }
